--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SpringCrud
 server.port=8081
-spring.data.mongodb.uri=mongodb+srv://admin:admin@faizansayani.dk0al.mongodb.net/SayaniDb
+spring.data.mongodb.uri=mongodb+srv://Harshak:Harshak123@cluster0.nyntv.mongodb.net/HarshakDb
 spring.jackson.default-property-inclusion=non_null
 
 
